Bug 922406 - Ion-compile global scripts that use 'this'. r=shu